bad/bin_op_eq_null_bool.example_compiler_output
ERROR
[1mbad/bin_op_eq_null_bool.lat:3:7: [1;31merror: [0;1moperator == cannot compare values of types `null` and `boolean` because values are not convertible to either of the two types[m
	null == true;
	     [1;32m^[m
